<resources>
    <string name="app_name">napnap</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="splash_activity_beforemain">欢迎来到napnap</string>
    <string name="front_page">首页</string>
    <string name="find_game">找游戏</string>
    <string name="community">社区</string>
    <string name="message">消息</string>
    <string name="personality">我</string>
    <string name="popular_list">热门</string>
    <string name="highScore_list">高分</string>
    <string name="high_recommend">推荐</string>
    <string name="username">用户名</string>
    <string name="enter_username">请输入用户名，用户名不为空</string>
    <string name="password">密码</string>
    <string name="enter_password">请输入密码，密码只包含小写字母和数字，6-12位</string>
    <string name="confirm_password">确认密码</string>
    <string name="enter_secondpassword">请再次输入密码</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="agree_terms">勾选即代表同意《服务协议》和《隐私政策》</string>
    <string name="editProfile">编辑个人信息</string>
    <string name="back">后退</string>
    <string name="search">请输入搜索内容</string>
    <string name="searchButton">搜索</string>
    <string name="history">历史搜索</string>
    <string name="games">游戏</string>
    <string name="users">用户</string>
    <string name="posts">帖子</string>
    <string name="baseurl">http://192.168.241.23:8888/</string>
    <string name="preference_file_key">napnap_sharePreference</string>
    <string name="invalid_username">账号不能为空</string>
    <string name="invalid_password">密码应该只包含小写字母和数字，6-12位</string>
    <string name="welcome">欢迎</string>
    <string name="clickToLogin">点击头像登录</string>
    <string name="check">查看</string>
    <string name="default_search_content">请输入搜索内容</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="subtype_label">输入方法配置</string>
    <string name="newPassword">新密码</string>
    <string name="confirmNumPassword">确认新密码</string>
</resources>