<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/front_page"
        android:icon="@drawable/baseline_navigate_before_24"
        android:title="@string/front_page" />

    <item
        android:id="@+id/find_game"
        android:icon="@drawable/baseline_games_24"
        android:title="@string/find_game" />

    <item
        android:id="@+id/community"
        android:icon="@drawable/baseline_360_24"
        android:title="@string/community" />

    <item
        android:id="@+id/message"
        android:icon="@drawable/baseline_message_24"
        android:title="@string/message" />
    <item
        android:id="@+id/personality"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/personality" />
</menu>