<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.userlogin_register.RegisterActivity"
    >

    <!-- Back Button -->
    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_arrow_back_ios_24"
    />

    <!-- App Logo -->
    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/backButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:src="@drawable/napnap"
    />

    <!-- Username Label -->
    <TextView
        android:id="@+id/usernameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/appLogo"
        android:layout_marginTop="16dp"
        android:text="@string/username"
        android:textSize="16sp" />

    <!-- Username Input -->
    <EditText
        android:id="@+id/usernameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/usernameLabel"
        android:layout_marginTop="8dp"
        android:hint="@string/enter_username"
        android:inputType="text" />

    <!-- Password Label -->
    <TextView
        android:id="@+id/passwordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/usernameInput"
        android:layout_marginTop="16dp"
        android:text="@string/password"
        android:textSize="16sp" />

    <!-- Password Input -->
    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordLabel"
        android:layout_marginTop="8dp"
        android:hint="@string/enter_password"
        android:inputType="textPassword" />

    <!-- Confirm Password Label -->
    <TextView
        android:id="@+id/confirmPasswordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordInput"
        android:layout_marginTop="16dp"
        android:text="@string/confirm_password"
        android:textSize="16sp" />

    <!-- Confirm Password Input -->
    <EditText
        android:id="@+id/confirmPasswordInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/confirmPasswordLabel"
        android:layout_marginTop="8dp"
        android:hint="@string/enter_secondpassword"
        android:inputType="textPassword" />

    <!-- Register Button -->
    <Button
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/confirmPasswordInput"
        android:layout_marginTop="16dp"
        android:text="@string/register"
        android:onClick="register" />

    <!-- Terms and Conditions Checkbox -->
    <CheckBox
        android:id="@+id/termsCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/registerButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/agree_terms" />

</RelativeLayout>
